src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@layer base {
  h1 {
    @apply text-2xl font-bold;
  }
  h2 {
    @apply text-xl font-bold;
  }
  h3 {
    @apply text-lg font-bold;
  }
  h4 {
    @apply text-base font-bold;
  }
}

@layer components {
  .btn {
    @apply flex gap-2 rounded-lg p-2 px-4 font-medium;
  }
  .btn-primary {
    @apply btn border border-primary bg-primary text-secondary hover:bg-primary-900 disabled:border-primary/50 disabled:bg-primary/50 dark:border-secondary/30 dark:bg-primary-300/30 disabled:dark:bg-gray-600 disabled:dark:text-gray-800;
  }

  .btn-primary-outline {
    @apply btn border border-primary/30 bg-gray-100 text-primary hover:bg-primary/5 disabled:border-primary/50 disabled:bg-secondary/50 disabled:text-primary/50 dark:border-secondary/70 dark:bg-primary/5 dark:text-secondary dark:hover:bg-white/30;
  }

  .btn-secondary {
    @apply btn border border-secondary-200 bg-secondary-200 text-primary hover:border-secondary-400 hover:bg-secondary-400 hover:text-secondary disabled:border-secondary-200/50 disabled:bg-secondary-200/50;
  }

  .btn-secondary-outline {
    @apply btn border border-secondary-200 hover:bg-secondary-200 disabled:border-secondary-200/50 disabled:bg-secondary-200/50;
  }

  .btn-success {
    @apply btn border border-success bg-success text-secondary hover:bg-success-600 disabled:border-success/50 disabled:bg-success/50;
  }

  .btn-success-outline {
    @apply btn border border-success bg-secondary text-success hover:bg-success hover:text-secondary disabled:border-success/50 disabled:hover:bg-success/50;
  }

  .btn-warning {
    @apply btn bg-warning text-secondary hover:bg-warning-300 disabled:bg-warning/50;
  }

  .btn-warning-outline {
    @apply btn border border-warning bg-secondary text-warning hover:bg-warning hover:text-secondary disabled:border-warning/50 disabled:hover:bg-warning/50;
  }

  .btn-danger {
    @apply btn bg-danger text-secondary hover:bg-danger-700 disabled:bg-danger/50;
  }

  .btn-danger-outline {
    @apply btn border border-danger bg-secondary text-danger hover:bg-danger hover:text-secondary disabled:border-danger/50 disabled:hover:bg-danger/50 dark:bg-primary;
  }

  .btn-check {
    @apply mx-auto w-5 rounded-md bg-success p-0.5 text-secondary;
  }

  .btn-delete {
    @apply mx-auto h-5 w-5 rounded-md bg-danger p-0.5 text-secondary;
  }

  .popover-option {
    @apply whitespace-nowrap p-2 text-start hover:bg-gray-200/50;
  }

  .combobox {
    @apply rounded-lg border bg-transparent px-2 py-1 text-secondary;
  }

  .combobox-options {
    @apply rounded-lg border;
  }

  .combobox-option {
    @apply px-4 py-1 hover:rounded-lg hover:bg-primary-200 data-[disabled]:bg-transparent dark:hover:bg-white/20 dark:data-[disabled]:bg-transparent;
  }

  .tbl-th {
    @apply border-b bg-primary/5 p-2 pt-8 first:rounded-tl-lg last:rounded-tr-lg;
  }

  .tbl-tr {
    @apply border-b border-primary/5 last:border-none dark:border-white/5;
  }

  .tbl-td {
    @apply p-2 py-2;
  }

  .tbl-hover {
    @apply hover:bg-primary-100/30;
  }
}

